fix overflow bug

--- a/src/modal/ModalContent.scss
+++ b/src/modal/ModalContent.scss
@@ -28,7 +28,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 33%;
+  width: 30%;
   height: 100%;
   padding: 30px;
 }
